# gxde-timer-neo

./: CMakeLists.txt  README.md  build.sh  gxde-timer.pro  translate_generation.sh  translate_update.sh
assets/: assets.qrc  gxde-timer.desktop
dabao/extract/DEBIAN/: control  md5sums
dabao/extract/opt/apps/top.yzzi.tomato/: info
dabao/extract/opt/apps/top.yzzi.tomato/files/: one-tomato
debian/: changelog  com.gitee.deepin-opensource.one-tomato.desktop  control  copyright  install  one-tomato.info  rules
outdeb/: top.yzzi.tomato_1.0.5_amd64.deb
src/: CMakeLists.txt  gxde-timer.pro  main.cpp  one-tomato.pro  tabbutton.cpp  tabbutton.h  widget.cpp  widget.cpp.autosave  widget.h  widget.ui
translations/: gxde-timer_zh_CN.ts  one-tomato_zh_CN.qm  one-tomato_zh_CN.ts
